# AgnoCode

./: .gitignore  README.md  api_usage.db  install_key_manager.ps1  install_key_manager.sh  requirements.txt
agno_backend/: api_test.py  cerebras_test.py  env_test.py  key_manager_test.py  stress_test.py
agno_backend/env/: api_usage.db  api_usage.db-shm  api_usage.db-wal  basic_api_test.py  health_test.py  key_manager_test.py  stress_test.py
agno_backend/linear_kanban/: agent.py  architect_tools.py  db_linear.db  db_linear_agent.db  linear_agent_os.py  linear_os.py
api_management/: health_test.py  key_manager_test.py  stress_test.py
companion_agent/: pyproject.toml
companion_agent/companion_agent/: __init__.py  companion.py  companion_test.db  os_playground.py  test_companion.py
companion_sidecar_module/companion_agent/: companion.py  os_playground.py  test_companion.py  test_project.db
env/: api_usage.db
key_manager/: pyproject.toml
key_manager/key_manager/: __init__.py  log_config.py  multi_provider_wrapper.py
key_manager/key_manager/key_rotation/: rotation_manager.py
key_manager/key_manager/tests/: env_test.py
key_manager_module/: pyproject.toml
key_manager_module/api_key_rotater.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
key_manager_module/env_manager/: __init__.py  api_usage.db  env_test.py  key_manager.py
key_manager_module/key_manager/: __init__.py  env_manager.py  env_test.py
notion/: architect_tools.py  notion_agent.py  notion_agent_os.py
