[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "companion-agent"
version = "0.1.0"
description = "A sidecar companion for Agno workers"
dependencies = [
    "agno"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["companion_agent*"]